--- a/sass/partial/_footer.scss
+++ b/sass/partial/_footer.scss
@@ -19,6 +19,7 @@ footer {
         ul {
             list-style: none;
             padding: 0px;
+            margin-bottom: 10px;
 
             li {
                 padding: 5px 0px;
